# cppFinanzOrg

./: CMakeLists.txt  Doxyfile  FinanzOrg.csv  resource.qrc
qml/: ApplicationWindows.qml  Dashboard.qml  Table.qml  globals.js
src/: global_Enums.hpp  main.cpp
src/controllers/: CSVReader.cpp  CSVReader.hpp  calculator.cpp  calculator.hpp  category.cpp  category.hpp
src/models/: dataModel.cpp  dataModel.hpp  tableModel.cpp  tableModel.hpp
